# lurescope

./: Dockerfile  README.md  SCORECARD.md  pyproject.toml
.github/workflows/: ci.yml
blog/: 2026-07-23-robustness-gap-fraud-detection.md
docs/assets/: scorecard.json
lurescope/: __init__.py  app.py  cli.py  defense.py  models.py  service.py
lurescope/data/: sample_lures.jsonl
lurescope/models/: tfidf-logreg-fraud.joblib
lurescope/static/: index.html
scripts/: export_static_model.py  robustness_scorecard.py
space/: README.md  index.html  model.json
tests/: test_api.py  test_defense.py  test_scorecard.py
